ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chonkaas
  labels:
    app: chonkaas
