deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  chonkaas-app-py
  namespace: chonkass
  labels:
    app:  chonkaas-app-py
    env: prod
    version: "0.1"
spec:
  selector:
    matchLabels:
      app: chonkaas-app-py
      env: prod
      version: "0.1"
  replicas: 10
  template:
    metadata:
      labels:
        app: chonkaas-app-py
        env: prod
        version: "0.1"
    spec:
      containers:
      - name:  chonkaas-app-py
        image:  mainmainrl/chonkass-app-py:0.1
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  5000
          name:  chonkaas-app-py
      restartPolicy: Always
